Sun Jan 29 19:50:59 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* symbol.c: Move predefined register values to...
	* predef_reg.c: ...here (new file).
	* symbol.h (SYMBOL_NEONQUADREG, SYMBOL_NEONDOUBLEREG,
	SYMBOL_VFPDOUBLEREG, SYMBOL_VFPSINGLEREG): Add.
	* decode.c (decode): Add test on currently unsupported Thumb/ThumbEE
	state.
	* asm.c, asm.h (gASM_Phase): Move to...
	* phase.c, phase.h (gPhase): ...here.
	(Phase_PrepareFor): Add.
	* m_cpu.c, m_cpu.h (c_code16,c_thumb,c_thumbx,c_code32): Move to...
	* state.c, state.h: ...here (new files).
	(Syntax_e, InstrType_e, State_SetCmdLineSyntax,
	State_SetCmdLineInstrType, State_PrepareForPhase, State_GetSyntax,
	State_GetInstrType): Add.
	* main.c (-16,-32,-arm,-thumb,-thumbx): Add new command line options.
	* Makefile.am (phase.c, predef_reg.c, state.c): Add.
	* commands.c, m_cpuctrl.c, help_cop.c, error.c, local.c, local.h,
	m_cpumem.c, area.c, area.h, macros.c, reloc.c, get.c, asm.c, main.c,
	asm.h, eval.c, lit.c: Follow above changes.

Sun Jan 29 15:55:33 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* macros.c (MKeyword_e): Add.
	(Macro_GetKeyword): Renamed from Macro_IsMENDAtInput and support
	MACRO keyword as well.
	(c_macro): Use Macro_GetKeyword iso Macro_IsMENDAtInput and add check
	on nested MACRO construction.

Sun Jan 29 15:28:22 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* commands.c (DefineInt_RelocUpdater): Fix reloc issue against
	current area.
	* m_cpuctrl.c (Branch_RelocUpdater): Support more reloc combinations
	(based on what we have in DefineInt_RelocUpdater).

Sat Jan 28 13:48:16 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* area.h (Area): Add 'number' field. Change 'int norelocs' field into
	'uint32_t numRelocs'.
	* area.c (areaNew): Follow Area struct change.
	* symbol.h (Symbol): Change type 'codeSize' from size_t to uint32_t,
	'offset' from unsigned int to uint32_t.  Update comments on the meaning
	of 'used' field.